--- a/src/components/crop/crop.less
+++ b/src/components/crop/crop.less
@@ -3,6 +3,9 @@
 	width: 1200px;
 	height: 800px;
 	cursor: crosshair;
+	margin: 0 auto;
+	// margin-top: 20px;
+	// margin-left: 30px;
 }
 .image-crop-mask {
 	position: absolute;
